--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Markup for betterWeb",
   "scripts": {
     "start:dev": "webpack-dev-server --config ./configs/webpack.config.js",
+    //"svgo": "svgo -f ./app/images/svg-src -o ./app/images/svg-dist",
     "webpack": "webpack --config ./configs/webpack.config.js",
     "webpack:watch": "webpack --watch --config ./configs/webpack.config.js"
   },
@@ -20,6 +21,9 @@
     "node-sass": "^4.7.2",
     "npm-run-all": "^4.1.2",
     "sass-loader": "^6.0.6",
+    "svg-url-loader": "^2.3.1",
+    "svgo": "^1.0.3",
+    "url-loader": "^0.6.2",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.10.1"
   },
